# appimagetool-C

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: appimage.c  appimagetool.h  config.c  desktop.c  dwarfs.c  elf.c  log.c  main.c  sha1.c  uruntime.c  util.c  zsync.c
